<resources>

    <string name="app_name">Cinema</string>
    <string name="Add">Add</string>
    <string name="List">List</string>
    <string name="NomedoFilme">Nome do Filme</string>
    <string name="DatadoFilme">0000-00-00</string>
    <string name="PaisdoFilme">País</string>
    <string name="GenerodoFilme">Genero</string>
    <string name="RealizadordoFilme">Realizador</string>
    <string name="SinopsedoFilme">Sinopse do Filme</string>
    <string name="DataEstreia">Data de Estreia</string>
    <string name="Genero">Gênero</string>
    <string name="Realizador">Realizador</string>
    <string name="Pais">País</string>
    <string name="Sinopse">Sinopse</string>

</resources>